# ailab

./: README.md
HO-Tracker-Baseline-Challenge/: .gitignore  README.md
HO-Tracker-Baseline-Challenge/lib/rl/: network_builder_residual_bih.py
HO-Tracker-Baseline-Challenge/main/cfg/: config.yaml
HO-Tracker-Baseline-Challenge/main/dataset/: base.py  factory.py
HO-Tracker-Baseline-Challenge/main/rl/: train.py
HO-Tracker-Baseline-Challenge/scripts/: check_sharpa_interface.py  render_retarget_mesh_video.py  render_retarget_video.py
dexhand_baseline/: CLAUDE.md
dexhand_baseline/lib/rl/: network_builder_residual_sh.py  res_models.py
dexhand_baseline/main/dataset/: mano2dexhand.py
dexhand_baseline/main/rl/: eval_rollout.py  (+1 more)
dexhand_baseline/scripts/: render_mano_video.py
do-as-i-do/: .gitmodules
do-as-i-do/deployment/: .gitignore  README.md
do-as-i-do/reconstruction/: .gitignore
do-as-i-do/retargeting/: pyproject.toml
do-as-i-do/retargeting/config/override/: do_as_i_do.yaml
do-as-i-do/retargeting/retargeting/assets/robots/mano/: left.xml  right.xml
do-as-i-do/retargeting/retargeting/assets/robots/sharpa/: left.xml
do-as-i-do/retargeting/retargeting/pipeline/: resolve_pedestal.py  solve_ik.py
do-as-i-do/retargeting/retargeting/utils/: __init__.py  in_hand.py  interp.py  math.py  mjwp.py  sampling.py  tracking_error.py
video2action/: .gitignore  README.md
video2action/reconstruction/: HAND_RECON_HOWTO.md  README.md  SETUP_NOTES.md  run_hand_task2.sh  run_pipeline.sh
video2action/retargeting/: .gitignore  README.md  launch.py  pyproject.toml
(+60 files in other folders)
